--- a/.env
+++ b/.env
@@ -33,9 +33,9 @@ DATABASE_URL="mysql://root:@127.0.0.1:3306/symf_aamin_db?serverVersion=10.11.2-M
 # Choose one of the transports below
 # MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
-MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
+# MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=null://null
+MAILER_DSN=smtp://051bc2349f7575:15e3efefebf299@sandbox.smtp.mailtrap.io:2525
 ###< symfony/mailer ###
