--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "easycorp/easyadmin-bundle": "^4.10",
         "phpdocumentor/reflection-docblock": "^5.4",
         "phpstan/phpdoc-parser": "^1.29",
+        "symfony/apache-pack": "^1.0",
         "symfony/asset": "7.1.*",
         "symfony/console": "7.1.*",
         "symfony/doctrine-messenger": "7.1.*",
