setting up google auth

--- a/.env
+++ b/.env
@@ -39,3 +39,8 @@ DATABASE_URL="mysql://root:@127.0.0.1:3306/symf_aamin_db?serverVersion=10.11.2-M
 ###> symfony/mailer ###
 MAILER_DSN=smtp://051bc2349f7575:15e3efefebf299@sandbox.smtp.mailtrap.io:2525
 ###< symfony/mailer ###
+
+###> GOOGLE AUTH ###
+GOOGLE_OAUTH_ID=173642203859-61qcn7i1pifegtuueg3538bn7it9aopt.apps.googleusercontent.com
+GOOGLE_OAUTH_SECRET=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
+###> GOOGLE AUTH ###
